horizontal scroll issue fixed

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,10 +27,6 @@ body{
     color: #ffd7b6;
 }
 
-.container-fluid{
-    padding: 0 !important;
-}
-
 .home-banner{
     background-image: url('../img/home-banner/backg.png');
     width: 100%;
